# word2mat

./: .gitignore  BERT_comparison.ipynb  README.md  __init__-checkpoint.py  evaluation.ipynb  experiment.ipynb  fetch_words-checkpoint-checkpoint.ipynb  fetch_words-checkpoint.ipynb  matrix_summarization-checkpoint.ipynb  package-lock.json  pyproject.toml  train.ipynb  word2vec_comparsion.ipynb  words-checkpoint.py
experiment1/: dist_plot.py  init_matrix.py  init_vector.py  main.py
experiment1/results/: experiment1
results/: fpr_BERT.pickle  fpr_word2mat.pickle  fpr_word2vec.pickle  tpr_BERT.pickle  tpr_word2mat.pickle  tpr_word2vec.pickle
tokipona/: __init__.py  stats.py  text.py  text.txt  words.json  words.py
word2mat/: __init__.py  utils.py  vectors.py
word2mat/data/: __init__.py  dataset.py  phrase.py  sentence.py
