[tool.poetry]
name = "word2mat"
version = "0.1.0"
description = "Representing words as matrices to incorporate word order."
authors = ["malyvsen <5940672+malyvsen@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
torch = "^1.8.1"
tqdm = "^4.60.0"
numpy = "^1.20.2"
scipy = "^1.6.3"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
pandas = "^1.2.4"
plotly = "^4.14.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
