[tool.poetry]
name = "word2mat"
version = "0.1.0"
description = "Representing words as matrices to incorporate word order."
authors = ["malyvsen <5940672+malyvsen@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
torch = "^1.8.1"
numpy = "^1.20.2"
spacy = "^3.0.6"
datasets = "^1.6.2"
tqdm = "4.49"
manydo = "^0.1.5"
[tool.poetry.dependencies.en_core_web_md]
url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.0.0/en_core_web_md-3.0.0.tar.gz"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
plotly = "^4.14.3"
black = { version = "^21.5b0", allow-prereleases = true }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
